# alienware-m15-rgb

./: .gitignore  README.md  install.sh  pyproject.toml
alienware_m15_rgb/: __init__.py  cli.py  colors.py  driver.py
docs/: PROTOCOL.md
gnome-extension/alienware-m15-rgb@local/: extension.js  metadata.json
packaging/: PKGBUILD  alienware-m15-rgb.spec
udev/: 99-alienware-m15-rgb.rules
